--- a/project_view.html
+++ b/project_view.html
@@ -5,18 +5,18 @@
     <title>الفهرس الليبي الموحد</title>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #eceef1; color: #333; margin: 0; padding: 5px; font-size: 12px; }
+        body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #eceef1; color: #333; margin: 0; padding: 5px; font-size: 11px; }
         .project-bar { background: #2c3e50; color: #fff; padding: 5px 10px; display: flex; align-items: center; justify-content: space-between; border-radius: 4px; margin-bottom: 2px; }
         .compact-grid { display: grid; grid-template-columns: repeat(6, 1fr); gap: 4px; background: #fff; padding: 8px; border: 1px solid #ccc; border-radius: 4px; margin-top: 2px; }
         .grid-7 { grid-template-columns: repeat(8, 1fr); }
         label { font-size: 10px; font-weight: bold; color: #555; text-align: center; display: block; margin-bottom: 1px; }
-        input, select { width: 100%; border: 1px solid #bbb; padding: 2px 4px; font-size: 12px; height: 22px; text-align: right; border-radius: 2px; box-sizing: border-box; background: #fdfdfd; }
+        input, select { width: 100%; border: 1px solid #bbb; padding: 2px 4px; font-size: 11px; height: 22px; text-align: right; border-radius: 2px; box-sizing: border-box; background: #fdfdfd; }
         .actions { margin: 5px 0; display: flex; gap: 4px; justify-content: center; flex-wrap: wrap; }
-        .btn { padding: 4px 12px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-weight: bold; font-size: 11px; }
+        .btn { padding: 4px 12px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-weight: bold; font-size: 10px; }
         .btn-save { background: #27ae60; } .btn-smart { background: #f39c12; } .btn-imp { background: #e67e22; }
         .preview-table { width: 100%; border-collapse: collapse; background: #fff; margin-top: 5px; border: 1px solid #ccc; }
-        .preview-table th { background: #f2f2f2; padding: 4px; border: 1px solid #ccc; font-size: 11px; }
-        .preview-table td { border: 1px solid #ccc; padding: 3px; text-align: right; font-size: 12px; }
+        .preview-table th { background: #f2f2f2; padding: 4px; border: 1px solid #ccc; font-size: 10px; }
+        .preview-table td { border: 1px solid #ccc; padding: 3px; text-align: right; font-size: 11px; }
         .btn-t { padding: 2px 5px; font-size: 9px; cursor: pointer; border-radius: 2px; border: 1px solid #ccc; background: #f8f9fa; margin: 0 1px; }
         #smartModal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); background:white; border:2px solid #2c3e50; padding:15px; z-index:9999; width:400px; box-shadow: 0 5px 20px rgba(0,0,0,0.3); border-radius:5px; }
     </style>
@@ -106,6 +106,17 @@ const cln = (s) => {
     return str;
 };
 
+// دالة لبناء البيان الببليوغرافي الموحد (لتجنب التكرار)
+function buildBiblio(r) {
+    if(!r.title) return "";
+    let b = `<b>${r.author}</b>. ${r.title}`;
+    if(r.collab) b += `؛ بمشاركة ${r.collab}`;
+    if(r.translator) b += `؛ ترجمة ${r.translator}`;
+    if(r.editor) b += `؛ ${r.editor}`;
+    b += `. - ${r.place}: ${r.publisher}, ${r.year}.`;
+    return b;
+}
+
 function processSmart() {
     let raw = document.getElementById('smartInput').value;
     let p = raw.split('.');
@@ -126,12 +137,7 @@ function processSmart() {
 function saveData() {
     let d = {}; 
     document.querySelectorAll('.in').forEach(i => d[i.id] = i.value ? i.value.trim() : "");
-    
-    // تصحيح شرط التحقق لضمان قبول القيمة
-    if(!d.subject || d.subject === "") {
-        return alert("رأس الموضوع مطلوب");
-    }
-
+    if(!d.subject || d.subject === "") return alert("رأس الموضوع مطلوب");
     if(editIdx > -1) records[editIdx] = d; else records.push(d);
     editIdx = -1;
     records.sort((a,b) => cln(a.subject).localeCompare(cln(b.subject), 'ar'));
@@ -148,7 +154,7 @@ function updateUI() {
         h += `<tr>
             <td style="text-align:center">${isBook ? s++ : '--'}</td>
             <td><strong>${r.subject}</strong>${r.see?'<br>انظر: '+r.see:''}${r.see_also?'<br><small>انظر أيضا: '+r.see_also+'</small>':''}</td>
-            <td>${r.title ? `<b>${r.author}</b>. ${r.title}. ${r.editor?'- '+r.editor+'. ':''}- ${r.place}: ${r.publisher}, ${r.year}.` : ''}</td>
+            <td>${buildBiblio(r)}</td>
             <td style="text-align:center"><button class="btn-t" onclick="editRec(${i})">تعديل</button><button class="btn-t" style="color:red" onclick="deleteRec(${i})">حذف</button></td>
         </tr>`;
     });
@@ -234,7 +240,7 @@ function previewFullList() {
             lastSub = r.subject;
         }
         if(r.title && !r.see) {
-            c += `<div style="position:relative; margin-bottom:15px;"><span style="position:absolute; left:0; font-weight:bold;">(${s++})</span><p style="margin:0; padding-left:40px;"><b>${r.author}</b>. ${r.title}. ${r.editor?'- '+r.editor+'. ':''}- ${r.place}: ${r.publisher}, ${r.year}.</p></div>`;
+            c += `<div style="position:relative; margin-bottom:15px;"><span style="position:absolute; left:0; font-weight:bold;">(${s++})</span><p style="margin:0; padding-left:40px;">${buildBiblio(r)}</p></div>`;
         }
     });
     win.document.write(c + `</div>`);
