--- a/project_view.html
+++ b/project_view.html
@@ -105,6 +105,7 @@ function buildBiblioPart(r) {
     b += `. - ${r.place}: ${r.publisher}, ${r.year}. ـــ`;
     if(r.pages) b += ` ${r.pages}`;
     if(r.series) b += ` . - (${r.series})`;
+    if(r.orig_title) b += ` . ـــ ${r.orig_title}`;
     return b;
 }
 
