--- a/project_view.html
+++ b/project_view.html
@@ -9,7 +9,7 @@
         .project-bar { background: #2c3e50; color: #fff; padding: 4px 10px; display: flex; align-items: center; justify-content: space-between; border-radius: 4px; margin-bottom: 1px; }
         .compact-grid { display: grid; grid-template-columns: repeat(6, 1fr); gap: 3px; background: #0ad2f5; padding: 4px; border: 1px solid #ccc; border-radius: 4px; margin-top: 1px; }
         label { font-size: 9px; font-weight: bold; color: #555; text-align: center; display: block; margin-bottom: 1px; }
-        input, select { width: 100%; border: 1px solid #bbb; padding: 1px 4px; font-size: 10px; height: 50px; text-align: right; border-radius: 2px; box-sizing: border-box; background: #fff; }
+        input, select { width: 100%; border: 1px solid #bbb; padding: 1px 4px; font-size: 12px; height: 28px; text-align: right; border-radius: 2px; box-sizing: border-box; background: #c8dbf7; }
         .actions { margin: 2px 0; display: flex; gap: 3px; justify-content: center; flex-wrap: wrap; }
         .btn { padding: 3px 10px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-weight: bold; font-size: 9px; }
         .btn-save { background: #27ae60; } .btn-smart { background: #f39c12; }
