--- a/project_view.html
+++ b/project_view.html
@@ -185,4 +185,37 @@ function previewJournalList() {
 
 function previewAuthorIndex() {
     let win = window.open('', '', 'width=800,height=600');
-    let content = `<div dir="rtl" style="font-family:'Times New Roman'; padding:1in; column-count:
+    let content = `<div dir="rtl" style="font-family:'Times New Roman'; padding:1in; column-count:2; font-size:11pt;">`;
+    let indexMap = {}; let serial = 1;
+    records.forEach(r => { if(!r.see && r.title) { let authors = [r.author, r.collab_idx].filter(v => v); authors.join('؛').split('؛').forEach(v => { v = v.trim(); if(v) { if(!indexMap[v]) indexMap[v] = []; indexMap[v].push(serial); } }); serial++; } });
+    Object.keys(indexMap).sort((a,b)=>cln(a).localeCompare(cln(b),'ar')).forEach(key => { content += `<div style="margin-bottom:4pt; border-bottom:0.5pt solid #eee;">${key} <span style="float:left">(${formatNumbers(indexMap[key])})</span></div>`; });
+    win.document.write(content + `</div>`);
+}
+
+function previewIndex(type) {
+    let win = window.open('', '', 'width=800,height=600');
+    let content = `<div dir="rtl" style="font-family:'Times New Roman'; padding:1in; column-count:2; font-size:11pt;">`;
+    let indexMap = {}; let serial = 1;
+    records.forEach(r => { if(!r.see && r.title) { let val = r[type]; if(val) { String(val).split('؛').forEach(v => { v = v.trim(); if(v) { if(!indexMap[v]) indexMap[v] = []; indexMap[v].push(serial); } }); } serial++; } });
+    Object.keys(indexMap).sort((a,b)=>cln(a).localeCompare(cln(b),'ar')).forEach(key => { content += `<div style="margin-bottom:4pt; border-bottom:0.5pt solid #eee;">${key} <span style="float:left">(${formatNumbers(indexMap[key])})</span></div>`; });
+    win.document.write(content + `</div>`);
+}
+
+function saveData() {
+    let d = {}; document.querySelectorAll('.in').forEach(i => d[i.id] = i.value ? i.value.trim() : "");
+    if(!d.subject) return alert("رأس الموضوع مطلوب");
+    if(editIdx > -1) records[editIdx] = d; else records.push(d);
+    editIdx = -1; records.sort((a,b) => cln(a.subject).localeCompare(cln(b.subject), 'ar'));
+    updateUI(); document.getElementById('biblioForm').reset();
+}
+function editRec(i) { editIdx = i; Object.keys(records[i]).forEach(k => { if(document.getElementById(k)) document.getElementById(k).value = records[i][k]; }); }
+function deleteRec(i) { if(confirm("حذف؟")) { records.splice(i,1); updateUI(); } }
+function switchProject(v) { localStorage.setItem('p_active', v); location.reload(); }
+function createNewProject() { let n = prompt("المشروع:"); if(n){ projects.push(n); localStorage.setItem('p_list', JSON.stringify(projects)); switchProject(n); }}
+function exportToExcel() { const ws = XLSX.utils.json_to_sheet(records); const wb = XLSX.utils.book_new(); XLSX.utils.book_append_sheet(wb, ws, "Records"); XLSX.writeFile(wb, `${currentProj}.xlsx`); }
+function importExcel(e) { const reader = new FileReader(); reader.onload = (evt) => { records = XLSX.utils.sheet_to_json(XLSX.read(evt.target.result, {type: 'binary'}).Sheets[XLSX.read(evt.target.result, {type: 'binary'}).SheetNames[0]]); updateUI(); }; reader.readAsBinaryString(e.target.files[0]); }
+window.onload = updateUI;
+</script>
+<datalist id="subList"></datalist>
+</body>
+</html>
