--- a/project_view.html
+++ b/project_view.html
@@ -88,13 +88,19 @@ function buildBiblioPart(r) {
     if(!r.title) return "";
     let b = `${r.title}`;
     
-    if(r.collab || r.translator) {
-        b += " / "; 
-        if(r.collab) b += r.author + " ، " + r.collab;
-        else b += r.author; 
-
-        if(r.translator) b += " ؛ ترجمة " + r.translator; 
-    } else { 
+    if (r.collab || r.translator) {
+        b += " / ";
+        if (r.collab && r.collab.trim() !== "") {
+            b += r.author + " ، " + r.collab;
+        } else {
+            b += r.author;
+        }
+        if (r.translator && r.translator.trim() !== "") {
+            b += " ؛ ترجمة " + r.translator;
+        }
+    } else {
+        b += " . ـــ ";
+    }
         b += " . ـــ "; 
     }
 
