--- a/project_view.html
+++ b/project_view.html
@@ -7,11 +7,11 @@
     <style>
         body { font-family: 'Segoe UI', Tahoma, sans-serif; background: #eceef1; color: #333; margin: 0; padding: 0; font-size: 11px; overflow: hidden; }
         .fixed-header { position: fixed; top: 0; left: 0; right: 0; background: #2c3e50; z-index: 1000; padding: 5px; }
-        .compact-grid { display: grid; grid-template-columns: repeat(6, 1fr); gap: 4px; background: #CFCFCF; padding: 8px; border-bottom: 2px solid #aaa; }
+        .compact-grid { display: grid; grid-template-columns: repeat(7, 1fr); gap: 4px; background: #CFCFCF; padding: 8px; border-bottom: 2px solid #aaa; }
         label { font-size: 10px; font-weight: bold; color: #444; display: block; }
         input { width: 100%; border: 1px solid #999; padding: 2px; font-size: 11px; height: 22px; border-radius: 2px; box-sizing: border-box; }
         .scroll-content { margin-top: 240px; height: calc(100vh - 240px); overflow-y: auto; padding: 10px; }
-        .actions { display: flex; gap: 3px; justify-content: center; background: #CFCFCF; padding-bottom: 8px; }
+        .actions { display: flex; gap: 3px; justify-content: center; background: #CFCFCF; padding-bottom: 8px; flex-wrap: wrap; }
         .btn { padding: 4px 10px; cursor: pointer; border: none; border-radius: 3px; color: #fff; font-size: 10px; font-weight: bold; }
         .preview-table { width: 100%; border-collapse: collapse; background: #fff; }
         .preview-table td { border: 1px solid #ccc; padding: 5px; text-align: right; }
@@ -31,7 +31,7 @@
 
     <form id="biblioForm">
         <div class="compact-grid">
-            <div><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subList"></div>
+            <div><label>رأس الموضوع</label><input type="text" id="subject" class="in" list="subList" oninput="smartFill(this.value)"></div>
             <div><label>إحالة انظر</label><input type="text" id="see" class="in"></div>
             <div><label>إحالة انظر أيضاً</label><input type="text" id="see_also" class="in"></div>
             <div><label>المؤلف (مقلوب)</label><input type="text" id="author" class="in"></div>
@@ -58,6 +58,7 @@
             <button type="button" class="btn" style="background:#8e44ad" onclick="previewFullList()">المعاينة</button>
             <button type="button" class="btn" style="background:#555" onclick="previewAuthorIndex()">كشاف المؤلفين</button>
             <button type="button" class="btn" style="background:#d43f3a" onclick="previewIndex('title', 'كشاف العناوين')">كشاف العناوين</button>
+            <button type="button" class="btn" style="background:#d43f3a" onclick="previewIndex('trans_idx', 'كشاف المترجمين')">كشاف المترجمين</button>
             <button type="button" class="btn" style="background:#2c3e50" onclick="previewJournalList()">قائمة المجلات</button>
             <button type="button" class="btn" style="background:#2c3e50" onclick="previewSubjectList()">رؤوس الموضوعات</button>
         </div>
@@ -75,6 +76,15 @@ let records = JSON.parse(localStorage.getItem('recs_' + currentProj)) || [];
 let editIdx = -1;
 
 const cln = (s) => { if (!s) return ""; return String(s).trim().replace(/^ال(?=[^ل])/, "").replace(/آ/g, "اا").replace(/[أإآ]/g, "ا").replace(/ى/g, "ي"); };
+
+// الإدخال الذكي
+function smartFill(val) {
+    let existing = records.find(r => r.subject === val);
+    if (existing) {
+        document.getElementById('see').value = existing.see || "";
+        document.getElementById('see_also').value = existing.see_also || "";
+    }
+}
 
 function buildBiblioPart(r) {
     if(!r.title) return "";
@@ -102,10 +112,11 @@ function updateUI() {
     let h = ''; let s = 1; let subs = new Set();
     records.forEach((r, i) => {
         subs.add(r.subject);
-        h += `<tr><td style="width:30px; text-align:center;">${r.title && !r.see ? s++ : '-'}</td>
+        let isBook = r.title && !r.see;
+        h += `<tr><td style="width:30px; text-align:center;">${isBook ? s++ : '-'}</td>
             <td><strong>${r.subject} ${r.see ? 'انظر ' + r.see : ''}</strong>
             ${r.see_also ? '<br>انظر أيضاً: ' + r.see_also : ''}
-            <br>${r.author || ''}<br>${buildBiblioPart(r)}</td>
+            ${isBook ? `<br><strong>${r.author}</strong><br>${buildBiblioPart(r)}` : ''}</td>
             <td style="width:50px;"><button onclick="editRec(${i})">تعديل</button></td></tr>`;
     });
     document.getElementById('tableBody').innerHTML = h;
@@ -140,7 +151,8 @@ function previewSubjectList() {
     let c = `<div dir="rtl" style="padding:1in; font-family:'Times New Roman';"><h3>رؤوس الموضوعات</h3><hr>`;
     Object.keys(subjectMap).sort((a,b)=>cln(a).localeCompare(cln(b),'ar')).forEach(sub => {
         let n = subjectMap[sub];
-        c += `<div>${sub} <span style="float:left">${n.length > 1 ? n[0]+' - '+n[n.length-1] : n[0]}</span></div>`;
+        let rng = n.length > 1 ? n[0] + ' - ' + n[n.length-1] : n[0];
+        c += `<div style="border-bottom:1px solid #eee;">${sub} <span style="float:left; font-weight:bold;">${rng}</span></div>`;
     });
     win.document.write(c + `</div>`);
 }
